@@ -1539,7 +1539,7 @@ addsuffix(int tp, int flags, ZLE_STRING_T chars, int lenstr, int lensuf)
 /* Same as addsuffix, but from metafied string */
 
 /**/
-mod_export void
+static void
 addsuffixstring(int tp, int flags, char *chars, int lensuf)
 {
     int slen, alloclen;
