@@ -56,7 +56,6 @@ mod_export int locallevel;
 /* Variables holding values of special parameters */
  
 /**/
-mod_export
 char **pparams,		/* $argv        */
      **cdpath,		/* $cdpath      */
      **fpath,		/* $fpath       */
@@ -70,13 +69,11 @@ char **path,		/* $path        */
      **fignore;		/* $fignore     */
  
 /**/
-mod_export
 char *argzero,		/* $0           */
-     *posixzero,	/* $0           */
-     *home,		/* $HOME        */
+     *ifs,		/* $IFS         */
      *nullcmd,		/* $NULLCMD     */
      *oldpwd,		/* $OLDPWD      */
-     *zoptarg,		/* $OPTARG      */
+     *posixzero,	/* $0           */
      *prompt,		/* $PROMPT      */
      *prompt2,		/* $PROMPT2     */
      *prompt3,		/* $PROMPT3     */
@@ -85,14 +82,15 @@ char *argzero,		/* $0           */
      *rprompt,		/* $RPROMPT     */
      *rprompt2,		/* $RPROMPT2    */
      *sprompt,		/* $SPROMPT     */
-     *wordchars;	/* $WORDCHARS   */
+     *wordchars,	/* $WORDCHARS   */
+     *zoptarg,		/* $OPTARG      */
+     *zsh_terminfo,     /* $TERMINFO    */
+     *zsh_terminfodirs; /* $TERMINFO_DIRS */
 /**/
 mod_export
-char *ifs,		/* $IFS         */
+char *home,		/* $HOME        */
      *postedit,		/* $POSTEDIT    */
      *term,		/* $TERM        */
-     *zsh_terminfo,     /* $TERMINFO    */
-     *zsh_terminfodirs, /* $TERMINFO_DIRS */
      *ttystrname,	/* $TTY         */
      *pwd;		/* $PWD         */
 
@@ -973,7 +971,7 @@ createparamtable(void)
 /* assign various functions used for non-special parameters */
 
 /**/
-mod_export void
+static void
 assigngetset(Param pm)
 {
     switch (PM_TYPE(pm->node.flags)) {
@@ -2667,7 +2665,7 @@ setstrvalue(Value v, char *val)
 }
 
 /**/
-mod_export void
+static void
 assignstrvalue(Value v, char *val, int flags)
 {
     if (unset(EXECOPT))
@@ -3634,7 +3632,7 @@ sethparam(char *s, char **val)
  */
 
 /**/
-mod_export Param
+static Param
 assignnparam(char *s, mnumber val, int flags)
 {
     struct value vbuf;
@@ -4271,7 +4269,7 @@ arrvarsetfn(Param pm, char **x)
 }
 
 /**/
-mod_export char *
+char *
 colonarrgetfn(Param pm)
 {
     char ***dptr = (char ***)pm->u.data;
@@ -4279,7 +4277,7 @@ colonarrgetfn(Param pm)
 }
 
 /**/
-mod_export void
+void
 colonarrsetfn(Param pm, char *x)
 {
     char ***dptr = (char ***)pm->u.data;
@@ -6445,7 +6443,7 @@ setscope(Param pm)
 }
 
 /**/
-mod_export Param
+static Param
 upscope(Param pm, int reflevel)
 {
     Param up = pm->old;
@@ -6466,7 +6464,7 @@ upscope_upper(Param pm, int reflevel)
 }
 
 /**/
-mod_export int
+static int
 valid_refname(char *val)
 {
     char *t = itype_end(val, INAMESPC, 0);
